--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 .showcase::after {
   /* pseudo element */
   content: "";
-  height: 10vh;
+  height: 100vh;
   width: 100%;
   background-image: url(showcase.jpg);
   background-size: cover;
@@ -49,7 +49,7 @@ body {
 }
 
 .content .title {
-  font-size: 2.2rem;
+  font-size: 3.2rem;
   margin-top: 1rem;
 }
 
@@ -129,4 +129,19 @@ footer p {
     border-bottom: #333 dashed 1px;
     padding: 1.2rem 1rem;
   }
+}
+
+/* Landscape */
+@media(max-height: 500px) {
+  .content, .title, .content, .text {
+    display: none;
+  }
+
+  .content {
+    top: 5%;
+  }
+}
+
+.center div {
+  color: #fff;
 }
